--- a/css/general.css
+++ b/css/general.css
@@ -61,6 +61,13 @@ body {
   padding: 0 3.2rem;
   max-width: 140rem;
 }
+
+a:link,
+a:visited {
+  text-decoration: none;
+  color: inherit;
+}
+
 .sm-container {
   padding: 0 3.2rem;
 }
@@ -101,4 +108,69 @@ body {
 .link:visited {
   text-decoration: none;
   color: #222;
+}
+
+.form-heading {
+  color: #222;
+}
+
+.user-form {
+  width: 50%;
+  background-color: rgba(255, 255, 255, 0.13);
+  border-radius: 10px;
+  backdrop-filter: blur(10px);
+  border: 2px solid rgba(255, 255, 255, 0.1);
+  box-shadow: 0 0 4rem rgba(8, 7, 16, 0.6);
+  padding: 5rem 3.5rem;
+}
+.user-form * {
+  letter-spacing: 0.5px;
+  outline: none;
+  border: none;
+}
+
+.form-label {
+  display: block;
+  margin-top: 3rem;
+  font-size: 1.6rem;
+  font-weight: 500;
+  color: #222;
+}
+.form-input {
+  display: block;
+  height: 5rem;
+  width: 100%;
+  background-color: rgba(255, 255, 255);
+  border-radius: 3px;
+  padding: 0 1rem;
+  margin-top: 0.8rem;
+  font-size: 1.4rem;
+  font-weight: 300;
+}
+.user-form::placeholder {
+  color: #e5e5e5;
+}
+.action--form {
+  margin-top: 5rem;
+  width: 100%;
+  background-color: #ffffff;
+  color: #222;
+  padding: 1.5rem 0;
+  font-size: 1.8rem;
+  font-weight: 600;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  transition: 0.4s all ease;
+}
+
+.action--form:hover {
+  background-color: #222;
+  color: #fff;
+}
+
+.user-form-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 9.8rem 0;
 }
