--- a/css/style.css
+++ b/css/style.css
@@ -396,5 +396,54 @@
   color: #fff;
   font-size: 1.8rem;
 }
+
+/* FOOTER */
+.footer {
+  padding: 6.4rem 0;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  column-gap: 3.2rem;
+}
+
+.footer--main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.6rem;
+}
+
+.footer-heading {
+  font-size: 1.8rem;
+  margin-bottom: 1.2rem;
+}
+
+.social--logos {
+  display: flex;
+  gap: 1.6rem;
+}
+
+.social--logos a:link,
+.social--logos a:visited {
+  text-decoration: none;
+  color: #222;
+  font-size: 2.4rem;
+  font-weight: 500;
+}
+
+.mini-nav-item {
+  list-style: none;
+}
+
+.mini-nav {
+  margin-top: 2.4rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+  gap: 1.6rem;
+  font-size: 1.4rem;
+}
+
+/* LOGIN */
+
 /* Text - 10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
 Spacing - 2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128 */
