--- a/css/style.css
+++ b/css/style.css
@@ -443,7 +443,42 @@
   font-size: 1.4rem;
 }
 
-/* LOGIN */
+/* STORE */
+.store {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  row-gap: 1.8rem;
+  column-gap: 1.8rem;
+  padding: 9.8rem 0;
+}
 
+.products {
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+}
+
+.imageProduct {
+  border-radius: 9px;
+  box-shadow: 0 0 1rem 0 rgb(0, 0, 0, 0.2);
+}
+
+.nameProduct {
+  font-size: 2rem;
+  margin-top: 1.2rem;
+}
+
+.priceProduct {
+  font-size: 1.6rem;
+}
+
+.btnProduct {
+  width: 50%;
+  font-size: 1.8rem;
+  padding: 0.7rem 1.4rem;
+  background-color: #f59f00;
+  border: none;
+  border-radius: 5px;
+}
 /* Text - 10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
 Spacing - 2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128 */
