--- a/css/general.css
+++ b/css/general.css
@@ -150,17 +150,26 @@ a:visited {
 .user-form::placeholder {
   color: #e5e5e5;
 }
-.action--form {
+
+.form-btn {
   margin-top: 5rem;
   width: 100%;
-  background-color: #ffffff;
-  color: #222;
   padding: 1.5rem 0;
   font-size: 1.8rem;
   font-weight: 600;
   border-radius: 0.5rem;
   cursor: pointer;
   transition: 0.4s all ease;
+}
+.action--form {
+  background-color: #ffffff;
+  color: #222;
+}
+
+.delete--user {
+  border: none;
+  background-color: #fa5252;
+  color: #fff;
 }
 
 .action--form:hover {
@@ -173,4 +182,23 @@ a:visited {
   align-items: center;
   justify-content: center;
   margin: 9.8rem 0;
+}
+
+.btns--form {
+  display: flex;
+  gap: 1.6rem;
+}
+
+.pricePrint {
+  font-size: 1.8rem;
+}
+
+.loggedin:link,
+.loggedin:visited {
+  font-size: 1.6rem;
+  border-radius: 11px;
+  background-color: #f59f00;
+  color: #fff;
+  padding: 0.7rem 1.4rem;
+  border: 0.1rem solid #000;
 }
