--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@
   align-items: center;
   justify-content: center;
   gap: 1rem;
+  user-select: none;
 }
 
 .navigation--list {
@@ -254,47 +255,84 @@
 .testimonials--gallery {
   padding: 1.2rem 3.2rem;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
   align-items: center;
   background-color: #e8f5ff;
 }
 .reviews {
-  margin-top: 3.2rem;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(2, 1fr);
+  grid-template-columns: repeat(4, 1fr);
 }
 
 .customer {
   display: flex;
   flex-direction: column;
-  align-items: stretch;
-  gap: 1.2rem;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  width: 70%;
+  gap: 2.4rem;
   margin-bottom: 1.2rem;
+  border-radius: 9px;
+  padding: 2.4rem;
+  box-shadow: 0 0 10px rgb(0, 0, 0, 0.1);
+  position: relative;
+  overflow: hidden;
+  transition: 0.4s all ease;
+}
+
+.customer:hover {
+  transform: scale(1.1);
+}
+
+.customer::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -3rem;
+  width: 100%;
+  height: 50%;
+  opacity: 0.5;
+  border-radius: 50%/10%;
+  z-index: 1;
+}
+
+.customer--01::after {
+  background-color: #51cf66;
+}
+.customer--02::after {
+  background-color: #f59f00;
+}
+.customer--03::after {
+  background-color: #66d9e8;
+}
+.customer--04::after {
+  background-color: #fa5252;
 }
 
 .customer-image {
-  width: 15%;
+  width: 20%;
   border-radius: 50%;
+  z-index: 50;
 }
 
 .customer-name {
   font-size: 1.4rem;
-  color: #aaa;
+  color: #fff;
+  z-index: 49;
 }
 
 .review {
   line-height: 1.8;
   letter-spacing: 1.2;
-  padding-right: 4.8rem;
   font-size: 1.8rem;
   color: #777;
 }
 
 .gallery {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(3, 1fr);
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(2, 1fr);
   row-gap: 1rem;
   column-gap: 1rem;
   align-items: stretch;
@@ -447,7 +485,7 @@
 .store {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  row-gap: 1.8rem;
+  row-gap: 6.4rem;
   column-gap: 1.8rem;
   padding: 9.8rem 0;
 }
@@ -461,6 +499,8 @@
 .imageProduct {
   border-radius: 9px;
   box-shadow: 0 0 1rem 0 rgb(0, 0, 0, 0.2);
+  width: 20rem;
+  height: 20rem;
 }
 
 .nameProduct {
@@ -479,6 +519,36 @@
   background-color: #f59f00;
   border: none;
   border-radius: 5px;
+}
+
+/* Cart */
+.productsCart {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+}
+
+.cart-list {
+  list-style: none;
+}
+
+.totalPrice {
+  display: inline-block;
+  border-radius: 9px;
+  color: #222;
+  font-size: 3.2rem;
+  background-color: #f59f00;
+  padding: 0.7rem 1.4rem;
+  margin-bottom: 3.2rem;
+}
+
+.order-btn {
+  padding: 1.4rem 2.8rem;
+  background-color: #51cf66;
+  color: #fff;
+  font-size: 2.4rem;
+  border: none;
+  border-radius: 9px;
+  margin-bottom: 6.4rem;
 }
 /* Text - 10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
 Spacing - 2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128 */
